<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="900px"
    android:layout_height="950px"

    android:padding="5dp"
    android:background="@drawable/popuper"
    android:layout_gravity="center">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="333dp"

        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/list"
        android:textColor="@color/white"
        android:textSize="48px" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="55px"
        android:text="@string/m1"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10px"
        android:textSize="35px"
        android:text="@string/list2"
        android:textColor="@color/white" />
    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="55px"
        android:text="@string/m2"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="35px"
        android:layout_marginTop="20px"
        android:text="@string/list3"
        android:textColor="@color/white" />




</LinearLayout>